// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryEntry should render and match snapshot 1`] = `
<CategoryListItem__Row>
  <CategoryListItem__StyledLink
    to="/augsburg/de/willkommen"
  >
    <CategoryListItem__CategoryThumbnail
      alt=""
      src="https://cms.integreat-ap…03/Beratung-150x150.png"
    />
    <CategoryListItem__CategoryCaption
      aria-label="Willkommen"
      highlightStyle={
        Object {
          "backgroundColor": "#ffffff",
          "fontWeight": "bold",
        }
      }
      sanitize={[Function]}
      searchWords={Array []}
      textToHighlight="Willkommen"
    />
  </CategoryListItem__StyledLink>
  <CategoryListItem__SubCategory
    key="a36a57"
  >
    <CategoryListItem__StyledLink
      to="/augsburg/de/test"
    >
      <CategoryListItem__SubCategoryCaption
        aria-label="Child"
        searchWords={Array []}
        textToHighlight="Child"
      />
    </CategoryListItem__StyledLink>
  </CategoryListItem__SubCategory>
</CategoryListItem__Row>
`;

exports[`CategoryEntry should replace empty thumbnail 1`] = `
<CategoryListItem__Row>
  <CategoryListItem__StyledLink
    to="/augsburg/de/willkommen/willkommen-in-augsburg"
  >
    <CategoryListItem__CategoryThumbnail
      alt=""
      src="test-file-stub"
    />
    <CategoryListItem__CategoryCaption
      aria-label="GotNoThumb :O"
      highlightStyle={
        Object {
          "backgroundColor": "#ffffff",
          "fontWeight": "bold",
        }
      }
      sanitize={[Function]}
      searchWords={Array []}
      textToHighlight="GotNoThumb :O"
    />
  </CategoryListItem__StyledLink>
  <CategoryListItem__SubCategory
    key="a36a58"
  >
    <CategoryListItem__StyledLink
      to="/augsburg/de/willkommen/willkommen-in-augsburg"
    >
      <CategoryListItem__SubCategoryCaption
        aria-label="GotNoThumb :O"
        searchWords={Array []}
        textToHighlight="GotNoThumb :O"
      />
    </CategoryListItem__StyledLink>
  </CategoryListItem__SubCategory>
</CategoryListItem__Row>
`;

exports[`CategoryListItem should render and match snapshot 1`] = `
<CategoryEntry__Row>
  <CategoryEntry__StyledLink
    to="/augsburg/de/willkommen"
  >
    <CategoryEntry__CategoryThumbnail
      alt=""
      src="https://cms.integreat-ap…03/Beratung-150x150.png"
    />
    <Highlighter
      aria-label="Willkommen"
      highlightStyle={
        Object {
          "backgroundColor": "#ffffff",
          "fontWeight": "bold",
        }
      }
      sanitize={[Function]}
      searchWords={Array []}
      textToHighlight="Willkommen"
    />
    <div
      style={
        Object {
          "fontSize": "12px",
          "margin": "0 5px",
        }
      }
    />
  </CategoryEntry__StyledLink>
  <CategoryEntry__SubCategory
    key="a36a57"
  >
    <CategoryEntry__StyledLink
      to="/augsburg/de/test"
    >
      <CategoryEntry__SubCategoryCaption
        aria-label="Child"
        searchWords={Array []}
        textToHighlight="Child"
      />
    </CategoryEntry__StyledLink>
  </CategoryEntry__SubCategory>
</CategoryEntry__Row>
`;

exports[`CategoryListItem should replace empty thumbnail 1`] = `
<CategoryEntry__Row>
  <CategoryEntry__StyledLink
    to="/augsburg/de/willkommen/willkommen-in-augsburg"
  >
    <CategoryEntry__CategoryThumbnail
      alt=""
      src="test-file-stub"
    />
    <Highlighter
      aria-label="GotNoThumb :O"
      highlightStyle={
        Object {
          "backgroundColor": "#ffffff",
          "fontWeight": "bold",
        }
      }
      sanitize={[Function]}
      searchWords={Array []}
      textToHighlight="GotNoThumb :O"
    />
    <div
      style={
        Object {
          "fontSize": "12px",
          "margin": "0 5px",
        }
      }
    />
  </CategoryEntry__StyledLink>
  <CategoryEntry__SubCategory
    key="a36a58"
  >
    <CategoryEntry__StyledLink
      to="/augsburg/de/willkommen/willkommen-in-augsburg"
    >
      <CategoryEntry__SubCategoryCaption
        aria-label="GotNoThumb :O"
        searchWords={Array []}
        textToHighlight="GotNoThumb :O"
      />
    </CategoryEntry__StyledLink>
  </CategoryEntry__SubCategory>
</CategoryEntry__Row>
`;
